[tool.poetry]
name = "nlp-examples"
version = "0.1.0"
description = "NLP examples from dpalma's blog"
authors = ["Diego Palma <dpalmasan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
nltk = "^3.8.1"
requests = "^2.28.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
